--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,10 +10,11 @@
         <Label class="t-18 text-center font-weight-bold" [text]="loggedUser" ></Label>
         <StackLayout class="hr"></StackLayout>
     </StackLayout>
+    <Image *ngIf="avatarUrl" src="{{ avatarUrl }}" class="avatar"></Image>
     <GridLayout row="1" rows="auto, auto" columns="*, *" class="menu-container">
         <StackLayout row="0" col="0" data-name="home" class="menu-item">
-            <Button text="&#xf015;" class="fa menu-icon" (tap)="onMenuButtonTap($event)"></Button>
-            <Label text="Home" class="text-center" (tap)="onMenuButtonTap($event)"></Label>
+            <Button text="&#xf0aC;" class="fa menu-icon" (tap)="onMenuButtonTap($event)"></Button>
+            <Label text="Social" class="text-center" (tap)="onMenuButtonTap($event)"></Label>
         </StackLayout>
         <StackLayout row="0" col="1" data-name="news" class="menu-item">
             <Button text="&#xf1ea;" class="fa menu-icon" (tap)="onMenuButtonTap($event)"></Button>
@@ -24,9 +25,13 @@
             <Label text="Local Favorites" class="text-center" (tap)="onMenuButtonTap($event)"></Label>
         </StackLayout>
         <StackLayout row="1" col="1" data-name="settings" class="menu-item">
-            <Button text="&#xf013;" class="fa menu-icon" (tap)="onMenuButtonTap($event)"></Button>
+            <Button text="&#xf085;" class="fa menu-icon" (tap)="onMenuButtonTap($event)"></Button>
             <Label text="Settings" class="text-center" (tap)="onMenuButtonTap($event)"></Label>
+        </StackLayout>        
+        <StackLayout class="buttons">
+            <FacebookLoginButton (logout)="onLogout($event)"></FacebookLoginButton>
+            <Button text="Log out (custom)" (tap)="logout()"></Button>
+            <Button text="Get current access token" (tap)="getCurrentAccessToken()"></Button>
         </StackLayout>
     </GridLayout>
-    <Button row="2" class="btn btn-rounded-sm btn-primary btn-margin font-weight-bold t-18 flexbox-item" (tap)="logout()" text="Log out"></Button>
 </GridLayout>
