--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
           <TextField hint="Password" ...></TextField>
         </StackLayout>
 
-      <Button class="btn btn-login btn-rounded-sm font-weight-bold t-18" (tap)="login()" text="Log In"></Button>
+      <Button class="btn btn-login btn-rounded-sm font-weight-bold t-18" (tap)="login()" text="LOG IN HERE"></Button>
       <Button class="btn btn-signup btn-rounded-sm font-weight-bold t-18" (tap)="signup()" text="Sign Up"></Button>
     </StackLayout>
 </FlexboxLayout>
